kustomization/base/prometheus/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: prometheus-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
            path: /
            pathType: Prefix
