kustomization/base/prometheus/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - kind: Service
          name: prometheus-operated
          namespace: prometheus
          port: 9090
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https-redirect-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      middlewares:
        - name: http-to-https-middleware
          namespace: traefik
      services:
        - kind: TraefikService
          name: noop@internal
